# ConsoleTetris

./: .azure-pipelines.yml  CMakeLists.txt  ConsoleTetris.c  README.md  main.c  platform.h  platform_posix.c  platform_win32.c
